# fedeteria

./: .gitignore  Cargo.toml  info.txt
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  convenient_request.rs  information_store.rs  main.rs  router.rs  store.rs
frontend/src/Components/: bb_link.rs  boton_log_in.rs  button.rs  button_storage.rs  dni_input_field.rs  generic_button.rs  generic_input_field.rs  generic_text_input.rs  mod.rs  passwordTextInput.rs  password_input_login.rs  textInputLogIn.rs
frontend/src/Molecules/: HelloServer.rs  create_office_molecule.rs  create_publication_molecule.rs  delete_office_molecule.rs  log_in_molecule.rs  mod.rs  navbar.rs  publication_thumbnail.rs  register_molecule.rs  registrar_molecule.rs
frontend/src/Pages/: LogInPage.rs  create_office_page.rs  create_publication_page.rs  delete_office_page.rs  home.rs  home_page.rs  log_in_page.rs  mod.rs  profile_page.rs  publication_page.rs  register_page.rs  registrar_page.rs
frontend/src/Types/: user.rs
frontend/src/components/: checked_input_field.rs  dni_input_field.rs  generic_input_field.rs  indexed_button.rs  mod.rs  notification_thumbnail.rs  publication_thumbnail.rs  trade_thumbnail.rs  trueque_thumbnail.rs
frontend/src/molecules/: HelloServer.rs  change_password_from_log_in_molecule.rs  change_password_from_login_molecule.rs  change_password_from_profile_molecule.rs  change_user_role_molecule.rs  confirm_prompt_button_molecule.rs  create_office_molecule.rs  create_publication_molecule.rs  delete_office_molecule.rs  edit_personal_info_molecule.rs  edit_preferences_molecule.rs  finish_trade_molecule.rs  log_in_molecule.rs  mod.rs  navbar.rs  pay_publication_promotion_molecule.rs  promote_publication_from_office_molecule.rs  promote_publication_from_profile_molecule.rs  publication_grid_molecule.rs  publication_molecule.rs  publication_selector_molecule.rs  publication_thumbnail_molecule.rs  register_molecule.rs  send_code_to_change_password_molecule.rs  trade_grid_molecule.rs  trueque_molecule.rs  unlock_account_molecule.rs
frontend/src/pages/: allowed_discounts_page.rs  awaiting_price_publication.rs  change_password_from_log_in_page.rs  change_password_from_login_page.rs  change_password_from_profile_page.rs  change_user_rol_page.rs  create_discount_page.rs  create_office_page.rs  create_publication_page.rs  defined_trades_page.rs  delete_office_page.rs  discounts_page.rs  edit_personal_info_page.rs  edit_preferences_page.rs  editar_publicacion_page.rs  estadisticas_page.rs  finish_trade_page.rs  home_page.rs  log_in_page.rs  mod.rs  my_completed_trades_page.rs  my_defined_trades_page.rs  my_pending_trades_page.rs  my_publications_page.rs  my_trades_offers_page.rs  my_trades_page.rs  notifications_page.rs  pay_publication_promotion_page.rs  privileged_actions_page.rs  profile_page.rs  promote_publication_from_office_page.rs  promote_publication_from_profile_page.rs  publication_page.rs  publication_selector_page.rs  publication_trade_offers_page.rs  register_page.rs  saved_publications_page.rs  (+5 more)
server/: Cargo.toml
server/src/: mail.rs  main.rs  state.rs
(+14 files in other folders)
