[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.5.0"
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo = "0.11.0"
wasm-bindgen = "0.2.92"
web-sys = {version = "0.3.69", features = ["HtmlInputElement", "InputEvent", "DataTransfer"]}
reqwasm = "0.5.0"
serde = "1.0.200"
serde_json = "1.0.116"
yewdux-functional = "0.1.0"
yewdux = "0.10.0"
yew-hooks = "0.3.1"
chrono = {version = "0.4.38", features = ["now", "serde"]}

datos_comunes = { path = "../datos_comunes" }