[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["macros", "multipart"] }
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
chrono = {version = "0.4.38", features = ["now", "serde"]}
date_component = "0.4.1"

datos_comunes = { path = "../datos_comunes" }

lettre = "0.11.7"
lettre_email = "0.9.4"